@@ -4,6 +4,14 @@
 	* gnus-logic.el (gnus-advanced-body): Don't score by headers when
 	scoring by body.
 
+2012-11-16  Glenn Morris  <rgm@gnu.org>
+
+	* gnus-diary.el (nndiary-request-create-group-functions)
+	(nndiary-request-update-info-functions)
+	(gnus-subscribe-newsgroup-functions)
+	(nndiary-request-accept-article-functions):
+	Use new names for hooks rather than obsolete aliases.
+
 2012-11-14  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* dgnushack.el (define-obsolete-variable-alias): Simplify.
